--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,7 +1,5 @@
 name: Deploy to GCP - PROD
 
-
-
 on:
   push:
     branches:
@@ -16,17 +14,17 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Run tests
-        run: mvn -f api/pom.xml test
-
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
 
+      - name: Run tests (solo módulo API)
+        run: mvn -pl api -am test
+
       - name: Build API with Maven
-        run: mvn -f api/pom.xml clean package -DskipTests
+        run: mvn -pl api -am clean package -DskipTests
 
       - name: Build Docker image
         run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/iot-api:prod ./api
@@ -48,10 +46,8 @@ jobs:
           username: ${{ secrets.GCP_VM_USER_PROD }}
           key: ${{ secrets.GCP_VM_SSH_KEY_PROD }}
           script: |
-            # Esto asume que ya clonaste tu repo en la VM (puedes hacerlo en startup.sh o manualmente).
             cd ~/api-iot
             git pull origin master
-            
             docker compose -f docker-compose.deploy.yml down
             docker compose -f docker-compose.deploy.yml build
             docker compose -f docker-compose.deploy.yml up -d
