--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -25,19 +25,19 @@ jobs:
       - name: Build API (DEV)
         run: mvn -pl api -am clean package -DskipTests
 
-      - name: Docker Build
-        run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/iot-api:dev ./api
-
       - name: GCP Auth
         uses: google-github-actions/auth@v1
         with:
           credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
       - name: Docker auth GCP
-        run: gcloud auth configure-docker
+        run: gcloud auth configure-docker southamerica-west1-docker.pkg.dev
 
-      - name: Docker Push
-        run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/iot-api:dev
+      - name: Docker Build (Artifact Registry)
+        run: docker build -t southamerica-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/iot-api/iot-api:dev ./api
+
+      - name: Docker Push (Artifact Registry)
+        run: docker push southamerica-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/iot-api/iot-api:dev
 
       - name: SSH deploy to DEV VM
         uses: appleboy/ssh-action@master
