--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -42,9 +42,9 @@ jobs:
       - name: SSH deploy to DEV VM
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.GCP_VM_IP_DEV }}
-          username: ${{ secrets.GCP_VM_USER_DEV }}
-          key: ${{ secrets.GCP_VM_SSH_KEY_DEV }}
+          host: ${{ secrets.GCP_VM_IP_PROD }}
+          username: ${{ secrets.GCP_VM_USER_PROD }}
+          key: ${{ secrets.GCP_VM_SSH_KEY_PROD }}
           script: |
             cd ~/iot-prod
             git pull origin master
