fix deploy enviroments config

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -55,6 +55,6 @@ jobs:
 
             # Usamos docker-compose en vez de docker compose
             docker-compose -f docker-compose.dev.yml down || true
-            docker-compose -f docker-compose.dev.yml build
+            docker-compose -f docker-compose.dev.yml pull
             docker-compose -f docker-compose.dev.yml up -d
       
