--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -32,7 +32,7 @@ jobs:
           key: ${{ secrets.GCP_VM_SSH_KEY_DEV }}
           script: |
             cd ~/iot-dev
-            docker compose -f docker-compose.dev.yml down
+            docker-compose -f docker-compose.dev.yml down
             docker system prune -af
 
       - uses: appleboy/ssh-action@master
