--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -52,6 +52,6 @@ jobs:
             git pull origin master
 
             # Usamos sudo para docker porque el grupo docker se aplica después del reboot
-            sudo docker compose -f docker-compose.prod.yml down || true
-            sudo docker compose -f docker-compose.prod.yml pull
-            sudo docker compose -f docker-compose.prod.yml up -d
+            sudo docker-compose -f docker-compose.prod.yml down || true
+            sudo docker-compose -f docker-compose.prod.yml pull
+            sudo docker-compose -f docker-compose.prod.yml up -d
